添加swagger组件依赖

--- a/mall-manager-web/pom.xml
+++ b/mall-manager-web/pom.xml
@@ -62,6 +62,17 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <!-- swagger -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>${io.springfox.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>${io.springfox.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
