添加热部署依赖

--- a/mall-manager-web/pom.xml
+++ b/mall-manager-web/pom.xml
@@ -46,6 +46,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
+        <!--热部署依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+        </dependency>
         <!--dubbo-->
         <dependency>
             <groupId>com.alibaba.boot</groupId>
