添加thymeleaf模版配置信息

--- a/mall-manager-web/src/main/resources/application.yml
+++ b/mall-manager-web/src/main/resources/application.yml
@@ -15,3 +15,9 @@ server:
 logging:
   level:
     cn.com: debug
+
+# 模板配置
+spring:
+  thymeleaf:
+    cache: false
+    prefix: classpath:/templates/
