mall-manager-service发布dubbo服务时添加id标识

--- a/mall-manager/mall-manager-service/src/main/resources/application.yml
+++ b/mall-manager/mall-manager-service/src/main/resources/application.yml
@@ -38,6 +38,7 @@ mybatis:
 # dubbo-provide
 dubbo:
   application:
+    id: mall-manager
     name: mall-manager
   registry:
     address: zookeeper://192.168.56.102:2181
