--- a/mall-content/mall-content-service/src/main/resources/application.yml
+++ b/mall-content/mall-content-service/src/main/resources/application.yml
@@ -38,12 +38,12 @@ mybatis:
 # dubbo-provide
 dubbo:
   application:
-    name: mall-manager
+    name: mall-content
   registry:
     address: zookeeper://192.168.56.102:2181
     timeout: 600000
   protocol:
-    port: 20880
+    port: 20881
   scan:
     base-packages: cn.com.service
 
