--- a/mall-content/mall-content-service/src/main/resources/application.yml
+++ b/mall-content/mall-content-service/src/main/resources/application.yml
@@ -39,6 +39,7 @@ mybatis:
 dubbo:
   application:
     name: mall-content
+    qos-enable: false
   registry:
     address: zookeeper://192.168.56.102:2181
     timeout: 600000
