更换主键生成机制以及修改内容匪类管理查询Tree方法的名称

--- a/mall-manager-web/pom.xml
+++ b/mall-manager-web/pom.xml
@@ -47,6 +47,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <!-- 添加分页插件 -->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+        </dependency>
         <!--thymeleaf组件-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
