--- a/mall-manager/mall-manager-service/src/main/resources/application.yml
+++ b/mall-manager/mall-manager-service/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     username: root
     password: root
-    url: jdbc:mysql://192.168.56.102:3306/mall?serverTimezone=UTC
+    url: jdbc:mysql://192.168.56.102:3306/mall?serverTimezone=GMT%2B8
     driver-class-name: com.mysql.cj.jdbc.Driver
     ##以下为druid配置
     type: com.alibaba.druid.pool.DruidDataSource
