添加导入导出依赖

--- a/mall-manager/mall-manager-service/pom.xml
+++ b/mall-manager/mall-manager-service/pom.xml
@@ -67,6 +67,19 @@
             <groupId>org.apache.activemq</groupId>
             <artifactId>activemq-pool</artifactId>
         </dependency>
+        <!-- 导入导出模块 -->
+        <dependency>
+            <groupId>cn.afterturn</groupId>
+            <artifactId>easypoi-base</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>cn.afterturn</groupId>
+            <artifactId>easypoi-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>cn.afterturn</groupId>
+            <artifactId>easypoi-annotation</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <finalName>mall-manager-service</finalName>
